--- a/eudaq2/user/example/misc/ITS3-align.conf
+++ b/eudaq2/user/example/misc/ITS3-align.conf
@@ -8,7 +8,7 @@ NEVENTS   = 1000
 [DataCollector.dc]
 EUDAQ_FW = native
 #change the following to the required path
-EUDAQ_FW_PATTERN = /home/alpide-test/data/three_chips/run$6R_$12D$X
+EUDAQ_FW_PATTERN = /home/Alpaca/data/run$6R_$12D$X
 
 
 # top plane
