Allpix2 simulation files for detector with 6 chips

--- a/ALPIDE_simulation/alpide.conf
+++ b/ALPIDE_simulation/alpide.conf
@@ -1,42 +1,44 @@
-# SPDX-FileCopyrightText: 2020-2024 CERN and the Allpix Squared authors
-# SPDX-License-Identifier: MIT
+[Allpix]
+log_level = "INFO"
+log_format = "DEFAULT"
+detectors_file = "detector_alpide.conf"
+number_of_events = 100000 
+root_file = "output_6alpideroot_1GeV_mu-"
 
-# Reference https://doi.org/10.1016/j.nima.2016.05.016
-# Several dimensions taken from reference, some other are estimates for a realistic assembly
-type = "monolithic"
-geometry = "pixel"
+[GeometryBuilderGeant4]
+world_material = "air"
 
-number_of_pixels = 1024 512
-pixel_size = 29.24um 26.88um
+[DepositionGeant4]
+physics_list = FTFP_BERT_LIV
+particle_type = "mu-"
+number_of_particles =1
+max_step_length = 1um
+source_energy = 1GeV
+source_type = "beam"
+beam_direction = 0 0 1
+beam_divergence = 13.7mrad 29.9mrad 
+source_position = 0 0 -21.5cm
 
-sensor_thickness = 25um
-sensor_excess_top = 1200um
-sensor_excess_bottom = 200um
-sensor_excess_left = 30um
-sensor_excess_right = 30um
+[ElectricFieldReader]
+model = "linear"
+bias_voltage = -1V
 
-chip_thickness = 25um
+[GenericPropagation]
+temperature = 293K
+charge_per_step = 100
 
-# PCB chip board with cut-out for the sensor
-[support]
-thickness = 1.6mm
-size = 70mm 100mm
-offset = 0 30.0mm
-hole_size = 32mm 15mm
-hole_offset = 0 -30mm
-material = "g10"
+[SimpleTransfer]
+max_depth_distance = 5um
 
-# Kapton foils for shielding the sensor, 25um on both sides, see e.g. EUDET-type beam telescopes
-[support]
-thickness = 25um
-size = 40mm 25mm
-location = "absolute"
-offset = 0 0 7.5mm
-material = "kapton"
-[support]
-thickness = 25um
-size = 40mm 25mm
-location = "absolute"
-offset = 0 0mm -7.5mm
-material = "kapton"
+[DefaultDigitizer]
 
+[DetectorHistogrammer]
+
+# replace by [VisualizationGeant4] to run the visualization
+[VisualizationGeant4]
+mode = "gui"
+
+[CorryvreckanWriter]
+file_name = "corry_out_6alpideroot_1GeV_mu-"
+geometry_file = "geo_corry_alpide.geo"
+reference = "detector1"
