Corryvreckan files including output histograms
"cvsq.C" creates a canvas in TBrowser and "fitlang.C" is used to fit a convolution of a gaussian and a landau distribution to histograms produced by Corryvreckan.

--- a/ALPIDE_simulation/alpide.conf
+++ b/ALPIDE_simulation/alpide.conf
@@ -1,44 +1,22 @@
-[Allpix]
-log_level = "INFO"
-log_format = "DEFAULT"
-detectors_file = "detector_alpide.conf"
-number_of_events = 100000 
-root_file = "output_6alpideroot_1GeV_mu-"
+[Corryvreckan]
+detectors_file = "alpide.geo"
+number_of_tracks = 1000
+log_level="WARNING"
+histogram_file = "histograms_6alpides_1GeV_mu.root"
+#detectors_file_updated="detector_alpide_updated.conf"
 
-[GeometryBuilderGeant4]
-world_material = "air"
+[FileReader]
+file_name = "../../../ALPACA-nikhefproject-LiekeGijsen/alpide_detector/output/CorryvreckanWriter/corry_out_6alpideroot_1GeV_mu-.root"
 
-[DepositionGeant4]
-physics_list = FTFP_BERT_LIV
-particle_type = "mu-"
-number_of_particles =1
-max_step_length = 1um
-source_energy = 1GeV
-source_type = "beam"
-beam_direction = 0 0 1
-beam_divergence = 13.7mrad 29.9mrad 
-source_position = 0 0 -21.5cm
+[Clustering4D]
+time_cut_abs = 1000ns
 
-[ElectricFieldReader]
-model = "linear"
-bias_voltage = -1V
+[Tracking4D]
+min_hits_on_track = 6
+spatial_cut_rel = 3 #tracks discarded after 3 sigma deviation spatially
+time_cut_rel = 3 #"" in time
+exclude_dut = true
+momentum = 1GeV
+track_model=gbl
 
-[GenericPropagation]
-temperature = 293K
-charge_per_step = 100
 
-[SimpleTransfer]
-max_depth_distance = 5um
-
-[DefaultDigitizer]
-
-[DetectorHistogrammer]
-
-# replace by [VisualizationGeant4] to run the visualization
-[VisualizationGeant4]
-mode = "gui"
-
-[CorryvreckanWriter]
-file_name = "corry_out_6alpideroot_1GeV_mu-"
-geometry_file = "geo_corry_alpide.geo"
-reference = "detector1"
