Changed Producer to print debug messages and run for 10min, made hitmap logarithmic

--- a/RUNCONTROL/ITS3.ini
+++ b/RUNCONTROL/ITS3.ini
@@ -18,10 +18,15 @@ dataproducers = ALPIDE_plane_0
 
 #top
 [Producer.ALPIDE_plane_0]
-#serial      = DAQ-0009002400530E19
 #serial      = DAQ-0009002400532232
-# 4 Eindhoven
-serial      = DAQ-000900240054142B
+# 5 Eindhoven
+#serial      = DAQ-000900240054142B
+# SOME OTHR DAQ
+#serial      = DAQ-0009092509591A1E
+# DAQ 3
+#serial      = DAQ-000900240054153A
+# DAQ 4
+serial      = DAQ-0009002400530E19
 plane       = 0
 triggermode = primary
  
