Added easy programming and power-on/power-off script, added all DAQ serial numbers to ITS3.ini and made 4 plane run configuration

--- a/RUNCONTROL/ITS3.ini
+++ b/RUNCONTROL/ITS3.ini
@@ -1,7 +1,6 @@
 [RunControl]
-dataproducers  = ALPIDE_plane_0
-#, ALPIDE_plane_1
-#, ALPIDE_plane_2, ALPIDE_plane_3, ALPIDE_plane_4
+dataproducers  = ALPIDE_plane_0, ALPIDE_plane_1 , ALPIDE_plane_2, ALPIDE_plane_3
+#ALPIDE_plane_4
 loggers     =
 collectors  = dc
 configs     = /home/alpaca/Nikhef-Project-Shared/RUNCONTROL/ITS3-align.conf
@@ -12,41 +11,48 @@ configs     = /home/alpaca/Nikhef-Project-Shared/RUNCONTROL/ITS3-align.conf
 #trigger_path = /home/pi/testbeam/trigger/software/
 
 [DataCollector.dc]
-dataproducers = ALPIDE_plane_0
-#, ALPIDE_plane_1
-#, ALPIDE_plane_2, ALPIDE_plane_3, ALPIDE_plane_4
+dataproducers = ALPIDE_plane_0, ALPIDE_plane_1, ALPIDE_plane_2, ALPIDE_plane_3
+#ALPIDE_plane_4
 
 #top
 [Producer.ALPIDE_plane_0]
-#serial      = DAQ-0009002400532232
 # 5 Eindhoven
 #serial      = DAQ-000900240054142B
 # SOME OTHR DAQ
 #serial      = DAQ-0009092509591A1E
 # DAQ 3
 #serial      = DAQ-000900240054153A
-# DAQ 4
+# Frankfurt = 6
+#serial      = DAQ-0009002400532232
+# Copenhagen = 3
+#serial      = DAQ-000900240054153A
+# Delft = 4
 serial      = DAQ-0009002400530E19
 plane       = 0
 triggermode = primary
  
 #bottom
-#[Producer.ALPIDE_plane_1]
-#serial      = DAQ-000900240054151B
-#plane       = 1
-#triggermode = replica
+[Producer.ALPIDE_plane_1]
+# Eindhoven = 5
+#serial      = DAQ-000900240054142B
+# Brussel 2
+serial      = DAQ-0009002400533331
+plane       = 1
+triggermode = replica
 
 #bottom
-#[Producer.ALPIDE_plane_2]
-#serial      = DAQ-0009092509593622
-#plane       = 2
-#triggermode = replica
+[Producer.ALPIDE_plane_2]
+# Copenhagen = 3
+serial      = DAQ-000900240054153A
+plane       = 2
+triggermode = replica
 
 #To_be_used
-#[Producer.ALPIDE_plane_3]
-#serial      = 
-#plane       = 3
-#triggermode = replica
+[Producer.ALPIDE_plane_3]
+# Eindhoven = 5
+serial      = DAQ-000900240054142B
+plane       = 3
+triggermode = replica
 
 
 #To_be_used
