--- a/RUNCONTROL/ITS3-align.conf
+++ b/RUNCONTROL/ITS3-align.conf
@@ -8,7 +8,7 @@ NEVENTS   = 5000000
 [DataCollector.dc]
 EUDAQ_FW = native
 #change the following to the required path
-EUDAQ_FW_PATTERN = /home/alpaca/Nikhef-Project-Shared/RUNCONTROL/tests/10min-loop-run$6R_$12D$X
+EUDAQ_FW_PATTERN = /home/alpaca/Nikhef-Project-Shared/RUNCONTROL/tests/4chip-PMTtrigger-run$6R_$12D$X
 
 
 # top plane
@@ -25,45 +25,33 @@ IDB           = 29
 STROBE_LENGTH = 100
 
 # bottom plane
-#[Producer.ALPIDE_plane_1]
-#EUDAQ_DC      = dc
-#EUDAQ_ID      = 1
-#ITHR          = 60
-#VCASN         = 108
-#VCASN2        = 120
-#VCLIP         = 60
-#IDB           = 29
-#STROBE_LENGTH = 100
+[Producer.ALPIDE_plane_1]
+EUDAQ_DC      = dc
+EUDAQ_ID      = 1
+ITHR          = 60
+VCASN         = 57
+VCASN2        = 59
+VCLIP         = 60
+IDB           = 29
+STROBE_LENGTH = 100
 
-#to_be_used
-#[Producer.ALPIDE_plane_2]
-#EUDAQ_DC      = dc
-#EUDAQ_ID      = 2
-#ITHR          = 60
-#VCASN         = 105
-#VCASN2        = 117
-#VCLIP         = 60
-#IDB           = 29
-#STROBE_LENGTH = 100
+[Producer.ALPIDE_plane_2]
+EUDAQ_DC      = dc
+EUDAQ_ID      = 2
+ITHR          = 60
+VCASN         = 57
+VCASN2        = 59
+VCLIP         = 60
+IDB           = 29
+STROBE_LENGTH = 100
 
-#to_be_used
-#[Producer.ALPIDE_plane_3]
-#EUDAQ_DC      = dc
-#EUDAQ_ID      = 3
-#ITHR          = 60
-#VCASN         = 105
-#VCASN2        = 117
-#VCLIP         = 60
-#IDB           = 29
-#STROBE_LENGTH = 400
+[Producer.ALPIDE_plane_3]
+EUDAQ_DC      = dc
+EUDAQ_ID      = 3
+ITHR          = 60
+VCASN         = 57
+VCASN2        = 59
+VCLIP         = 60
+IDB           = 29
+STROBE_LENGTH = 100
 
-#to_be_used
-#[Producer.ALPIDE_plane_4]
-#EUDAQ_DC      = dc
-#EUDAQ_ID      = 4
-#ITHR          = 60
-#VCASN         = 105
-#VCASN2        = 117
-#VCLIP         = 60
-#IDB           = 29
-#STROBE_LENGTH = 400
