Data analysis into time between events, time units, and tracks

--- a/RUNCONTROL/ITS3.ini
+++ b/RUNCONTROL/ITS3.ini
@@ -1,5 +1,5 @@
 [RunControl]
-dataproducers  = ALPIDE_plane_0, ALPIDE_plane_1 , ALPIDE_plane_2, ALPIDE_plane_3
+dataproducers  = ALPIDE_plane_0, ALPIDE_plane_1, ALPIDE_plane_2, ALPIDE_plane_3
 #ALPIDE_plane_4
 loggers     =
 collectors  = dc
@@ -16,41 +16,49 @@ dataproducers = ALPIDE_plane_0, ALPIDE_plane_1, ALPIDE_plane_2, ALPIDE_plane_3
 
 #top
 [Producer.ALPIDE_plane_0]
-# 5 Eindhoven
-#serial      = DAQ-000900240054142B
-# SOME OTHR DAQ
-#serial      = DAQ-0009092509591A1E
+# Eindhoven 5
+# serial      = DAQ-000900240054142B
+# Some other DAQ
+# serial      = DAQ-0009092509591A1E
 # DAQ 3
-#serial      = DAQ-000900240054153A
-# Frankfurt = 6
-#serial      = DAQ-0009002400532232
-# Copenhagen = 3
-#serial      = DAQ-000900240054153A
-# Delft = 4
+# serial      = DAQ-000900240054153A
+# Frankfurt  = 6
+# serial      = DAQ-0009002400532232
+# Copenhagen  = 3
+# serial      = DAQ-000900240054153A
+# Delft      = 4
 serial      = DAQ-0009002400530E19
 plane       = 0
 triggermode = primary
  
 #bottom
 [Producer.ALPIDE_plane_1]
-# Eindhoven = 5
-#serial      = DAQ-000900240054142B
-# Brussel 2
-serial      = DAQ-0009002400533331
+# Eindhoven  = 5
+# serial     = DAQ-000900240054142B
+# Brussel    = 2
+ serial     = DAQ-0009002400533331
+# Copenhagen = 3
+#serial      = DAQ-000900240054153A
 plane       = 1
 triggermode = replica
 
 #bottom
 [Producer.ALPIDE_plane_2]
 # Copenhagen = 3
-serial      = DAQ-000900240054153A
+ serial      = DAQ-000900240054153A
+# Brussel    = 2
+# serial     = DAQ-0009002400533331
 plane       = 2
 triggermode = replica
 
 #To_be_used
 [Producer.ALPIDE_plane_3]
 # Eindhoven = 5
-serial      = DAQ-000900240054142B
+# serial    = DAQ-000900240054142B
+# Delft     = 4
+# serial    = DAQ-0009002400530E19
+# Frankfurt = 6
+serial      = DAQ-0009002400532232
 plane       = 3
 triggermode = replica
 
