Added script to simply count events and one to append .raw output file, however, the last one does not work in practice

--- a/RUNCONTROL/ITS3-align.conf
+++ b/RUNCONTROL/ITS3-align.conf
@@ -8,8 +8,9 @@ NEVENTS   = 5000000
 [DataCollector.dc]
 EUDAQ_FW = native
 #change the following to the required path
-EUDAQ_FW_PATTERN = /home/alpaca/Nikhef-Project-Shared/RUNCONTROL/tests/4chip-2pmt-40deg-overnight-muon-run$6R_$12D$X
-
+#EUDAQ_FW_PATTERN = /home/alpaca/Nikhef-Project-Shared/RUNCONTROL/tests/4chip-2pmt-10deg-overnight-muon-run$6R_$12D$X
+#UDAQ_FW_PATTERN = /home/alpaca/Nikhef-Project-Shared/RUNCONTROL/tests/4chip-softwaretrig-cover-light-run$6R_$12D$X
+EUDAQ_FW_PATTERN = /home/alpaca/Nikhef-Project-Shared/RUNCONTROL/tests/4chip-2PMT-trigger-70degree-jun28-1324-run$6R_$12D$X
 
 # top plane
 [Producer.ALPIDE_plane_0]
@@ -29,7 +30,7 @@ STROBE_LENGTH = 100
 EUDAQ_DC      = dc
 EUDAQ_ID      = 1
 ITHR          = 60
-VCASN         = 57
+VCASN         = 58
 VCASN2        = 59
 VCLIP         = 60
 IDB           = 29
@@ -39,7 +40,7 @@ STROBE_LENGTH = 100
 EUDAQ_DC      = dc
 EUDAQ_ID      = 2
 ITHR          = 60
-VCASN         = 57
+VCASN         = 56
 VCASN2        = 59
 VCLIP         = 60
 IDB           = 29
@@ -49,7 +50,7 @@ STROBE_LENGTH = 100
 EUDAQ_DC      = dc
 EUDAQ_ID      = 3
 ITHR          = 60
-VCASN         = 57
+VCASN         = 59
 VCASN2        = 59
 VCLIP         = 60
 IDB           = 29
